# serializer version: 1
# name: TestProcessOrganizationSettingsResponse.test_empty_settings[0]
  OrganizationSettings(settings={})
# ---
# name: TestProcessOrganizationSettingsResponse.test_successful_response[0]
  OrganizationSettings(settings={'run_queue_config': {'max_concurrent_runs': 25, 'tag_concurrency_limits': []}, 'sso_default_role': 'VIEWER'})
# ---
# name: TestProcessSetOrganizationSettingsResponse.test_successful_set[0]
  OrganizationSettings(settings={'sso_default_role': 'EDITOR'})
# ---
